finalised the navigation on the page and some demo text.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+            <a class="navbar-brand page-scroll" href="#page-top">Paul Stephen Milne</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -36,6 +36,6 @@
 
 
 <section class="intro-section">
-<h2>h2. Bootstrap heading <small>Secondary text</small></h2>
-<button type="button" class="btn btn-primary">Right</button>
+<h1>Paul Stephen Milne <br><small>his website</small></h2>
+
 </section>
