added some text to top of site

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,4 +38,8 @@
 <section class="intro-section">
 <h1>Paul Stephen Milne <br><small>his website</small></h2>
 
+    <p>This is my experimental website, using Ruby on Rails with a Bootstrap theme.</p>
+
+    <p>This site is hosted on Heroku.</p>
+
 </section>
