added some content to the about section

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="#work">Work</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
@@ -36,10 +36,27 @@
 
 
 <section class="intro-section">
+
 <h1>Paul Stephen Milne <br><small>his website</small></h2>
 
     <p>This is my experimental website, using Ruby on Rails with a Bootstrap theme.</p>
 
     <p>This site is hosted on Heroku.</p>
+
+</section>
+
+<section id="about" class="about-section">
+
+    <h2>About</h2>
+
+    <p>A few facts about me:</p>
+
+    <ul>
+
+        <li>I've lived and worked in Scotland since 1987.</li>
+        <li>I've worked for the Scottish Wildlife Trust, Moray House and the University of Edinburgh. I was at the University for 18 years, from 1998 to 2016.</li>
+        <li>I trained as a programmer in a 16 week course at Codeclan in 2016.</li>
+        <li>In 2017 I was hired by the Scottish Government in the Agriculture, Food and Rural Communities (AFRC) Division, as a Business Intelligence Developer.</li>
+    </ul>
 
 </section>
