fixed some layout problems and added an about and work section

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -60,3 +60,16 @@
     </ul>
 
 </section>
+
+<section id="work" class="work-section">
+
+    <h2>Work</h2>
+
+    <p>I have two Wordpress blogs for my writing:</p>
+
+    <ul>
+        <li><strong>Opus 58:</strong> Creative writing - poetry and songs mainly.</li>
+        <li><strong>Bicycle of Life:</strong> Bicycle and political advocacy, and coding.</li>
+    </ul>
+
+</section>
