added links to my blogs

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -68,8 +68,8 @@
     <p>I have two Wordpress blogs for my writing:</p>
 
     <ul>
-        <li><strong>Opus 58:</strong> Creative writing - poetry and songs mainly.</li>
-        <li><strong>Bicycle of Life:</strong> Bicycle and political advocacy, and coding.</li>
+        <li><strong><a href="https://paulmilnepoetry.wordpress.com/">Opus 58</a>:</strong> Creative writing - poetry and songs mainly.</li>
+        <li><strong><a href="https://bicycleoflife.wordpress.com/">Bicycle of Life</a>:</strong> Bicycle and political advocacy, and coding.</li>
     </ul>
 
 </section>
